--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,13 @@
 
 buildscript {
     ext.kotlin_version = '1.3.61'
+    def internalMavenUrl = "http://dev.inner.yuewen.local/nexus/repository/maven-public/"
     repositories {
+        maven {
+            url internalMavenUrl
+        }
         google()
         jcenter()
-        
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.6.0'
@@ -17,7 +20,11 @@ buildscript {
 }
 
 allprojects {
+    def internalMavenUrl = "http://dev.inner.yuewen.local/nexus/repository/maven-public/"
     repositories {
+        maven {
+            url internalMavenUrl
+        }
         google()
         jcenter()
         
