--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,10 @@ allprojects {
         }
         google()
         jcenter()
-        
+        flatDir {
+            dirs project(':AdSdk').file('libs/aar')
+            dirs project(':StatisticsModule').file('libs/aar')
+        }
     }
 }
 
