--- a/gradle.properties
+++ b/gradle.properties
@@ -20,7 +20,7 @@
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
 
-# ÔÄÎÄ»·¾³
+# é˜…æ–‡çŽ¯å¢ƒ
 isWebModuleDebug=false
 fontListAdv=true
 #systemProp.http.proxyHost=proxy.tencent.com
@@ -46,28 +46,30 @@ systemProp.http.proxyPort=8080
 android.injected.testOnly=false
 org.gradle.caching=true
 
-# Éý¼¶AndroidX
+# å‡çº§AndroidX
 android.useAndroidX=true
 android.enableJetifier=true
 android.databinding.enableV2=true
 
-#ÔËÐÐ»·¾³
-# 0: ¿ª·¢»·¾³ 1: ²âÊÔ»·¾³ 2: Ô¤·¢²¼»·¾³ 3: ÕýÊ½»·¾³
+#è¿è¡ŒçŽ¯å¢ƒ
+# 0: å¼€å‘çŽ¯å¢ƒ 1: æµ‹è¯•çŽ¯å¢ƒ 2: é¢„å‘å¸ƒçŽ¯å¢ƒ 3: æ­£å¼çŽ¯å¢ƒ
 default_run_env=3
 
-#true Ô´Âë»·¾³£¬false aar»·¾³£¬>>> ÔÆ¶Ë±ØÐëÎª false£¬·ñÔòÎÞ·¨±àÒë <<<
-# ºËÐÄ¿âÊ¹ÓÃÔ´Âë±àÒë
+#true æºç çŽ¯å¢ƒï¼Œfalse aarçŽ¯å¢ƒï¼Œ>>> äº‘ç«¯å¿…é¡»ä¸º falseï¼Œå¦åˆ™æ— æ³•ç¼–è¯‘ <<<
+# æ ¸å¿ƒåº“ä½¿ç”¨æºç ç¼–è¯‘
 isCoreModuleSourceCode = false
 isCommonModuleSourceCode = false
-# ²å¼þ¿âÊ¹ÓÃÔ´Âë±àÒë
+# æ’ä»¶åº“ä½¿ç”¨æºç ç¼–è¯‘
 isPluginModuleSourceCode = false
-# ¹ã¸æ¿âÊ¹ÓÃÔ´Âë±àÒë
+# å¹¿å‘Šåº“ä½¿ç”¨æºç ç¼–è¯‘
 isAdModuleSourceCode = false
-# provider¿âÔ´Âë±àÒë
-isProviderSourceCode = false
-# LoginModuleÊ¹ÓÃÔ´Âë±àÒë
+# provideråº“æºç ç¼–è¯‘
+isProviderSourceCode = true
+# LoginModuleä½¿ç”¨æºç ç¼–è¯‘
 isLoginSourceCode = false
-# NetMonitorÊ¹ÓÃÔ´Âë±àÒë
+# NetMonitorä½¿ç”¨æºç ç¼–è¯‘
 isNetMonitorDebug = false
-# BadgeModuleÊ¹ÓÃÔ´Âë±àÒë
+# BadgeModuleä½¿ç”¨æºç ç¼–è¯‘
 isBadgeModuleSourceCode = false
+# Adapter
+isBaseQuickAdapterSourceCode = false
