--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,6 +72,7 @@ dependencies {
     implementation libraries.yuewenNetMonitor
     implementation libraries.yuewenLoginModule
     implementation project(':StatisticsModule')
+    implementation project(':BaseUI')
 }
 
 //获取编译环境
