--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,19 +15,17 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" /> <!-- 广播权限 -->
     <uses-permission android:name="com.yuewen.cooperate.reader.free.whitecard.permission" />
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
-
-
-
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
+        android:name=".MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".MyApp"
         android:theme="@style/AppTheme">
+        <activity android:name=".listdemo.ListActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
