[update] Demo 优化

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".viewmodel.ViewModelActivity"></activity>
-        <activity android:name=".listdemo.ListActivity" />
+        <activity android:name=".normallist.NormalListActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
