--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,11 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-
+    repositories {
+        flatDir {
+            dirs 'libs'
+        }
+    }
 
 }
 
@@ -50,6 +54,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    //implementation(name: 'BaseRecyclerViewAdapterHelper-2.9.30', ext: 'aar')
     implementation 'com.yuewen.cooperate.base-ui-component:basequickadapter:1.0.0'
     implementation project(':ProviderModule')
 
