--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,4 @@ include ':lib_provider_compiler'
 include ':provider_viewmodel'
 rootProject.name='ProviderModuleDemo'
 include ':app'
-include ':ProviderModule'
+include ':provider_core'
