--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,9 +55,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     //implementation(name: 'BaseRecyclerViewAdapterHelper-2.9.30', ext: 'aar')
-    implementation 'com.yuewen.cooperate.base-ui-component:basequickadapter:1.0.0'
-    implementation project(':provider_core')
-
+    //implementation 'com.yuewen.cooperate.base-ui-component:basequickadapter:1.0.0'
+    implementation project(':provider_viewmodel')
     //OkHttp 库
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
 }
