--- a/provider_viewmodel/build.gradle
+++ b/provider_viewmodel/build.gradle
@@ -15,6 +15,12 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+
+        repositories {
+            flatDir {
+                dirs 'libs'
+            }
+        }
     }
 
     buildTypes {
@@ -33,7 +39,7 @@ android {
 }
 
 dependencies {
-
+    api fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -41,4 +47,8 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+    api project(":provider_core")
+    //api(name: 'BaseRecyclerViewAdapterHelper-2.9.30', ext: 'aar')
+    api 'com.yuewen.cooperate.base-ui-component:basequickadapter:1.0.0'
 }
