--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+
 def config = rootProject.ext.android
 android {
     compileSdkVersion config.compileSdkVersion
@@ -50,10 +52,10 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
-    //implementation(name: 'BaseRecyclerViewAdapterHelper-2.9.30', ext: 'aar')
-    //implementation 'com.yuewen.cooperate.base-ui-component:basequickadapter:1.0.0'
-    implementation project(':provider_viewmodel')
 
+    implementation project(':provider_viewmodel')
+    //需要注意需要添加注解处理器！！
+    kapt project(':lib_provider_compiler')
     //OkHttp 库
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
 }
