--- a/lib_provider_compiler/build.gradle
+++ b/lib_provider_compiler/build.gradle
@@ -1,5 +1,10 @@
 apply plugin: 'java-library'
+
 java {
     sourceCompatibility = JavaVersion.VERSION_1_8
     targetCompatibility = JavaVersion.VERSION_1_8
+}
+dependencies {
+    implementation 'com.squareup:javapoet:1.12.1'
+    implementation project(':lib_provider_annotations')
 }
