--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.providermoduledemo">
 
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -33,5 +34,5 @@
             </intent-filter>
         </activity>
     </application>
-
+    <uses-sdk tools:overrideLibrary="com.bevis.basequickadapter"/>
 </manifest>
