--- a/provider_viewmodel/build.gradle
+++ b/provider_viewmodel/build.gradle
@@ -39,7 +39,7 @@ android {
 }
 
 dependencies {
-    api fileTree(include: ['*.jar'], dir: 'libs')
+    api fileTree(include: ['*.jar','*.aar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -51,6 +51,6 @@ dependencies {
     api project(":provider_core")
     api project(':lib_provider_annotations')
 
-    api(name: 'BaseRecyclerViewAdapterHelper-2.9.30', ext: 'aar')
+    //api (name: 'BaseRecyclerViewAdapterHelper-2.9.30', ext: 'aar')
     //api 'com.yuewen.cooperate.base-ui-component:basequickadapter:1.0.0'
 }
