[commit] 修改包依赖

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,7 +40,7 @@ android {
     }
     repositories {
         flatDir {
-            dirs 'libs'
+            dirs '../provider_viewmodel/libs'
         }
     }
 
