--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,8 @@
 apply from: 'config.gradle'
 buildscript {
     ext.kotlin_version = "1.4.10"
-    def internalMavenUrl = "http://dev.inner.yuewen.local/nexus/repository/maven-public/"
     repositories {
-        maven {
-            url internalMavenUrl
-        }
+        maven { url 'https://jitpack.io' }
         google()
         jcenter()
     }
@@ -20,11 +17,8 @@ buildscript {
 }
 
 allprojects {
-    def internalMavenUrl = "http://dev.inner.yuewen.local/nexus/repository/maven-public/"
     repositories {
-        maven {
-            url internalMavenUrl
-        }
+        maven { url 'https://jitpack.io' }
         google()
         jcenter()
     }
