--- a/provider_viewmodel/build.gradle
+++ b/provider_viewmodel/build.gradle
@@ -51,6 +51,6 @@ dependencies {
     api project(":provider_core")
     api project(':lib_provider_annotations')
 
-    api (name: 'BaseRecyclerViewAdapterHelper-2.9.30', ext: 'aar')
-    //api 'com.yuewen.cooperate.base-ui-component:basequickadapter:1.0.0'
+    //api (name: 'BaseRecyclerViewAdapterHelper-2.9.30', ext: 'aar')
+    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
 }
