[update] 预加载功能试验

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".viewmodel.ViewModelActivity"></activity>
+        <activity android:name=".preload.PreLoadActivity"></activity>
         <activity android:name=".normallist.NormalListActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
