[update] 重大更新，仿照 Glide 链式调用方式构建 Provider，去掉 Provider 所有状态

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".viewmodel.ViewModelActivity"></activity>
+        <activity android:name=".sample.SampleActivity"></activity>
         <activity android:name=".preload.PreLoadActivity"></activity>
         <activity android:name=".normallist.NormalListActivity" />
         <activity android:name=".MainActivity">
