[update] 重大更新，仿照 Glide 链式调用方式构建 Provider，去掉 Provider 所有状态

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,6 @@ dependencies {
     //api(name: 'BaseRecyclerViewAdapterHelper-2.9.30', ext: 'aar')
 
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.5'
 }
