--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,8 +54,9 @@ dependencies {
     //OkHttp 库
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
     //api(name: 'BaseRecyclerViewAdapterHelper-2.9.30', ext: 'aar')
-
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.5'
+    //glide 库
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+
 }
