--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,9 +24,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".sample.SampleActivity"></activity>
-        <activity android:name=".preload.PreLoadActivity"></activity>
-        <activity android:name=".normallist.NormalListActivity" />
+        <activity android:name=".sample.SampleActivity"/>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
