--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.providermoduledemo">
 
+    <uses-sdk tools:overrideLibrary="com.bevis.basequickadapter" />
+
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
@@ -24,7 +26,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".sample.SampleActivity"/>
+        <activity android:name=".sample.SampleListPageActivity"></activity>
+        <activity android:name=".sample.SampleActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,5 +36,5 @@
             </intent-filter>
         </activity>
     </application>
-    <uses-sdk tools:overrideLibrary="com.bevis.basequickadapter"/>
+
 </manifest>
