--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".sample.SampleListPageActivity"></activity>
+        <activity android:name=".sample.SampleListPageActivity"/>
         <activity android:name=".sample.SampleActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
