--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,5 +58,7 @@ dependencies {
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.5'
     //glide 库
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    //下拉刷新库，后续会更换成 QQ Reader 的刷新库
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
 }
