[commit] 底层剔除对 QuickRecyclerViewAdapter 的依赖

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     implementation project(':provider_viewmodel')
     //OkHttp 库
     implementation 'com.squareup.okhttp3:okhttp:3.11.0'
-    //api(name: 'BaseRecyclerViewAdapterHelper-2.9.30', ext: 'aar')
+    api(name: 'BaseRecyclerViewAdapterHelper-2.9.30', ext: 'aar')
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.5'
     //glide 库
