--- a/gradle.properties
+++ b/gradle.properties
@@ -26,3 +26,4 @@ org.gradle.caching=true
 # 升级AndroidX
 android.useAndroidX=true
 android.enableJetifier=true
+org.gradle.jvmargs= -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
