--- a/provider_generator/src/main/AndroidManifest.xml
+++ b/provider_generator/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.lulu.providerviewmodel">
+    package="com.qq.reader.provider.generator">
 
 </manifest>
