--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,9 +62,9 @@ dependencies {
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
     implementation project(':provider_core')
-    implementation project(':provider_generator')
+    implementation project(':provider_build')
     //Provider Generator 注解
-    implementation project(':lib_provider_gen_annotations')
+    implementation project(':lib_provider_build_annotations')
     //需要注意需要添加注解处理器！！
-    kapt project(':lib_provider_gen_compiler')
+    kapt project(':lib_provider_build_compiler')
 }
