--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".sample.SampleListPageActivity"/>
+        <activity android:name=".sample.SampleCommonSecondPageActivity"/>
         <activity android:name=".sample.SampleActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
