--- a/settings.gradle
+++ b/settings.gradle
@@ -4,5 +4,5 @@ include ':app'
 include ':provider_core'
 include ':provider_viewmodel'
 include ':provider_build'
-include ':lib_provider_build_annotations'
+include ':lib_provider_build_base'
 include ':lib_provider_build_compiler'
