--- a/provider_build/build.gradle
+++ b/provider_build/build.gradle
@@ -44,7 +44,9 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
-    implementation project(":provider_core")
-    implementation project(":lib_provider_build_base")
+    if (!isSourceBuildDataProviderComponent.toBoolean()) {
+        implementation project(":provider_core")
+        implementation project(":lib_provider_build_base")
+    }
 
 }
