--- a/provider_viewmodel/build.gradle
+++ b/provider_viewmodel/build.gradle
@@ -44,7 +44,9 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation project(":provider_core")
+    if (!isSourceBuildDataProviderComponent.toBoolean()) {
+        implementation project(":provider_core")
+    }
 
     //api (name: 'BaseRecyclerViewAdapterHelper-2.9.30', ext: 'aar')
     //api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
