--- a/provider_viewmodel/build.gradle
+++ b/provider_viewmodel/build.gradle
@@ -44,7 +44,10 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    if (!isSourceBuildDataProviderComponent.toBoolean()) {
+
+    if (isSourceBuildDataProviderComponent.toBoolean()) {
+        implementation project(":DataProviderComponent:provider_core")
+    } else {
         implementation project(":provider_core")
     }
 
