--- a/provider_build/build.gradle
+++ b/provider_build/build.gradle
@@ -44,7 +44,10 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
-    if (!isSourceBuildDataProviderComponent.toBoolean()) {
+    if (isSourceBuildDataProviderComponent.toBoolean()) {
+        implementation project(":DataProviderComponent:provider_core")
+        implementation project(":DataProviderComponent:lib_provider_build_base")
+    } else {
         implementation project(":provider_core")
         implementation project(":lib_provider_build_base")
     }
