--- a/lib_provider_build_compiler/build.gradle
+++ b/lib_provider_build_compiler/build.gradle
@@ -17,3 +17,14 @@ dependencies {
         }
     }
 }
+ext {
+    ARTIFACTID = "lib_provider_build_compiler"
+    GROUPID = "com.yuewen.component"
+    PACKAGING = "jar"
+    VERSION = "1.0.0"
+    DESCRIPTION = "DataProvider 组件注解编译库"
+    UPLOAD_LOCAL = "true"
+    UPLOAD_SNAPSHOT = "true"
+}
+
+apply from : "${project.rootDir}/android_maven_upload.gradle"
