--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,7 +62,7 @@ dependencies {
     if (!isSourceBuildDataProviderComponent.toBoolean()) {
         implementation project(':provider_viewmodel')
         implementation project(':provider_core')
-        implementation project(':provider_build')
+        implementation project(':provider_page')
         //Provider Generator 注解
         implementation project(':lib_provider_build_base')
         //需要注意需要添加注解处理器！！
@@ -70,25 +70,17 @@ dependencies {
     }
 }
 
-task uniteTask {
-    doFirst {
-        println "uniteTask 执行"
-    }
 
-}
-
-
-
-task uploadTestTask1 {
+//统一编译库
+task uniteUploadArchives {
     doLast {
-        println "uploadTestTask1"
+        println "统一编译执行结束"
     }
-}
-task uploadTestTask2 {
-    doLast {
-        println "uploadTestTask2"
-    }
+
 }
 
-uniteTask.dependsOn app:uploadTestTask1
-uniteTask.dependsOn app:uploadTestTask2
+uniteUploadArchives.dependsOn ":lib_provider_build_base:uploadArchives"
+uniteUploadArchives.dependsOn ":lib_provider_build_compiler:uploadArchives"
+uniteUploadArchives.dependsOn ":provider_core:uploadArchives"
+uniteUploadArchives.dependsOn ":provider_viewmodel:uploadArchives"
+uniteUploadArchives.dependsOn ":provider_page:uploadArchives"
