--- a/provider_core/build.gradle
+++ b/provider_core/build.gradle
@@ -56,3 +56,15 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-livedata:2.0.0"
     implementation 'com.google.code.gson:gson:2.8.5'
 }
+
+ext {
+    ARTIFACTID = "provider_core"
+    GROUPID = "com.yuewen.component"
+    PACKAGING = "aar"
+    VERSION = "1.0.0"
+    DESCRIPTION = "DataProvider 组件核心模块"
+    UPLOAD_LOCAL = "true"
+    UPLOAD_SNAPSHOT = "true"
+}
+
+apply from : "${project.rootDir}/android_maven_upload.gradle"
