--- a/provider_viewmodel/build.gradle
+++ b/provider_viewmodel/build.gradle
@@ -55,14 +55,14 @@ dependencies {
     //api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
 }
 
-//ext {
-//    ARTIFACTID = "provider_viewmodel"
-//    GROUPID = "com.yuewen.component"
-//    PACKAGING = "aar"
-//    VERSION = "1.0.1"
-//    DESCRIPTION = ""
-//    UPLOAD_LOCAL = "true"
-//    UPLOAD_SNAPSHOT = "true"
-//}
-//
-//apply from : "${project.rootDir}/android_maven_upload.gradle"
+ext {
+    ARTIFACTID = "provider_viewmodel"
+    GROUPID = "com.yuewen.component"
+    PACKAGING = "aar"
+    VERSION = "1.0.0"
+    DESCRIPTION = "DataProvider 组件 ViewModel 模块"
+    UPLOAD_LOCAL = "true"
+    UPLOAD_SNAPSHOT = "true"
+}
+
+apply from : "${project.rootDir}/android_maven_upload.gradle"
