--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ android {
     }
     repositories {
         flatDir {
-            dirs '../provider_viewmodel/libs'
+            dirs '/libs'
         }
     }
 
@@ -60,7 +60,6 @@ dependencies {
 
 
     if (!isSourceBuildDataProviderComponent.toBoolean()) {
-        implementation project(':provider_viewmodel')
         implementation project(':provider_core')
         implementation project(':provider_page')
         //Provider Generator 注解
@@ -82,5 +81,4 @@ task uniteUploadArchives {
 uniteUploadArchives.dependsOn ":lib_provider_build_base:uploadArchives"
 uniteUploadArchives.dependsOn ":lib_provider_build_compiler:uploadArchives"
 uniteUploadArchives.dependsOn ":provider_core:uploadArchives"
-uniteUploadArchives.dependsOn ":provider_viewmodel:uploadArchives"
 uniteUploadArchives.dependsOn ":provider_page:uploadArchives"
