--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,7 @@ android {
     }
     repositories {
         flatDir {
-            dirs '/libs'
+            dirs '../app/libs/'
         }
     }
 
