--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
 
     implementation 'com.google.code.gson:gson:2.4'
+    implementation project(":other")
     if (!isSourceBuildDataProviderComponent.toBoolean()) {
         implementation project(':provider_core')
         implementation project(':provider_page')
@@ -69,6 +70,12 @@ dependencies {
     }
 }
 
+kapt {
+    arguments {
+        arg("PROVIDER_MODULE_NAME", project.getName())
+        arg("IS_MAIN_PROJECT", true)
+    }
+}
 
 //统一编译库
 task uniteUploadArchives {
@@ -82,3 +89,10 @@ uniteUploadArchives.dependsOn ":lib_provider_build_base:uploadArchives"
 uniteUploadArchives.dependsOn ":lib_provider_build_compiler:uploadArchives"
 uniteUploadArchives.dependsOn ":provider_core:uploadArchives"
 uniteUploadArchives.dependsOn ":provider_page:uploadArchives"
+
+task testProject {
+//    println "主模块名字: " + project.getName()
+//    project.getRootProject().getSubprojects().each { subProject ->
+//        println"子模块1名字:  " + subProject.getName()
+//    }
+}
