去掉 APT 相关模块

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,5 +3,4 @@ rootProject.name='DataProviderComponent'
 include ':app'
 include ':provider_core'
 include ':provider_page'
-include ':lib_provider_build_base'
-include ':lib_provider_build_compiler'
+include ':YWRouter_Android'
