--- a/other/build.gradle
+++ b/other/build.gradle
@@ -41,5 +41,5 @@ dependencies {
 
 
     implementation project(':provider_core')
-    implementation project(':provider_page')
+    implementation project(':zebra_building')
 }
