--- a/settings.gradle
+++ b/settings.gradle
@@ -2,5 +2,5 @@ include ':other'
 rootProject.name='DataProviderComponent'
 include ':app'
 include ':provider_core'
-include ':provider_page'
+include ':zebra_building'
 include ':YWRouter_Android'
