--- a/zebra_building/build.gradle
+++ b/zebra_building/build.gradle
@@ -53,7 +53,7 @@ dependencies {
 }
 
 ext {
-    ARTIFACTID = "provider_page"
+    ARTIFACTID = "zebra_building"
     GROUPID = "com.yuewen.component"
     PACKAGING = "aar"
     VERSION = "1.0.0"
