--- a/gradle.properties
+++ b/gradle.properties
@@ -27,5 +27,5 @@ org.gradle.caching=true
 android.useAndroidX=true
 android.enableJetifier=true
 org.gradle.jvmargs= -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
-#如果依赖到主工程中，则会使用主工程的 isSourceBuildDataProviderComponent
-isSourceBuildDataProviderComponent=false
+#如果依赖到主工程中，则会使用主工程的 isSourceBuildZebra
+isSourceBuildZebra=false
