--- a/zebra_building/build.gradle
+++ b/zebra_building/build.gradle
@@ -43,9 +43,9 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.1.0'
 
-    if (isSourceBuildDataProviderComponent.toBoolean()) {
-        implementation project(":DataProviderComponent:zebra_core")
-        implementation project(":DataProviderComponent:lib_provider_build_base")
+    if (isSourceBuildZebra.toBoolean()) {
+        implementation project(":zebra:zebra_core")
+        implementation project(":zebra:lib_provider_build_base")
     } else {
         implementation project(":zebra_core")
     }
