[update]提交几个模块,先占坑

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,10 @@
-include ':other'
 rootProject.name='zebra'
-include ':app'
 include ':zebra_core'
 include ':zebra_building'
+
+//Demo 模块
 include ':YWRouter_Android'
+include ':QRBusinessBasic'
+include ':QRBookStore'
+include ':app'
+include ':other'
