--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,9 @@ dependencies {
 
     implementation 'com.google.code.gson:gson:2.4'
     implementation project(":other")
+    implementation project(":QRBookStore")
+    implementation project(":QRBusinessBasic")
+    implementation project(":YWRouter_Android")
     if (!isSourceBuildZebra.toBoolean()) {
         implementation project(':zebra_core')
         implementation project(':zebra_building')
@@ -68,8 +71,6 @@ dependencies {
 
 kapt {
     arguments {
-        arg("PROVIDER_MODULE_NAME", project.getName())
-        arg("IS_MAIN_PROJECT", true)
     }
 }
 
@@ -86,9 +87,3 @@ uniteUploadArchives.dependsOn ":lib_provider_build_compiler:uploadArchives"
 uniteUploadArchives.dependsOn ":zebra_core:uploadArchives"
 uniteUploadArchives.dependsOn ":zebra_building:uploadArchives"
 
-task testProject {
-//    println "主模块名字: " + project.getName()
-//    project.getRootProject().getSubprojects().each { subProject ->
-//        println"子模块1名字:  " + subProject.getName()
-//    }
-}
