--- a/QRBookStore/build.gradle
+++ b/QRBookStore/build.gradle
@@ -14,6 +14,12 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments = [AROUTER_MODULE_NAME: project.getName()]
+            }
+        }
     }
 
     buildTypes {
@@ -32,7 +38,7 @@ android {
 
     repositories {
         flatDir {
-            dirs 'libs'
+            dirs '../app/libs'
         }
     }
 }
@@ -42,6 +48,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:${gradle_build_versions.kotlin_version}"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
     def lifecycle_version = "2.2.0"
     // ViewModel
@@ -49,14 +56,24 @@ dependencies {
     // LiveData
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:$lifecycle_version"
 
+    compileOnly(name: 'BaseRecyclerViewAdapterHelper-2.9.30', ext: 'aar')
+
+
+    //TODO: 暂时使用系统的 RefreshLayout !!! 等 QRBusinessBasic 下沉后使用
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
+
     if (isSourceBuildZebra.toBoolean()) {
         implementation project(":zebra:zebra_core")
         implementation project(":zebra:QRBusinessBasic")
+        implementation project(":zebra:YWRouter_Android")
     } else {
         implementation project(":zebra_core")
         implementation project(":QRBusinessBasic")
+        implementation project(":YWRouter_Android")
     }
 
+
+    annotationProcessor 'com.alibaba:arouter-compiler:1.5.1'
 }
 
 ext {
