--- a/Sample_WB/build.gradle
+++ b/Sample_WB/build.gradle
@@ -17,11 +17,6 @@ android {
         multiDexEnabled true
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        javaCompileOptions {
-            annotationProcessorOptions {
-                arguments = [AROUTER_MODULE_NAME: project.getName()]
-            }
-        }
     }
 
     buildTypes {
@@ -77,11 +72,12 @@ dependencies {
         implementation project(':zebra_core')
     }
 
-    annotationProcessor 'com.alibaba:arouter-compiler:1.5.1'
+    kapt 'com.alibaba:arouter-compiler:1.5.1'
 }
 
 kapt {
     arguments {
+        arg("AROUTER_MODULE_NAME", project.getName())
     }
 }
 
