--- a/Sample_WB/build.gradle
+++ b/Sample_WB/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdkVersion gradle_build_versions.compileSdkVersion
 
     defaultConfig {
-        applicationId "com.example.providermoduledemo"
+        applicationId "com.lulu.hotsearch"
         minSdkVersion gradle_build_versions.minSdkVersion
         targetSdkVersion gradle_build_versions.targetSdkVersion
         versionCode 1
