--- a/gradle.properties
+++ b/gradle.properties
@@ -27,5 +27,11 @@ org.gradle.caching=true
 android.useAndroidX=true
 android.enableJetifier=true
 org.gradle.jvmargs= -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005
+
+#manifest 中的 version name
+app_version_name=1.0.0
+#manifest 中的 version code
+app_version_code=1
+
 #如果依赖到主工程中，则会使用主工程的 isSourceBuildZebra
 isSourceBuildZebra=false
