--- a/QRBusinessBasic/build.gradle
+++ b/QRBusinessBasic/build.gradle
@@ -43,6 +43,15 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.1.0'
 
+    //kotlin基础库+协程库
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.3.72"
+    api "org.jetbrains.kotlin:kotlin-reflect:1.3.72"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8"
+    api "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.8"
+
+    //OkHttp 库
+    api 'com.squareup.okhttp3:okhttp:3.11.0'
+
     if (isSourceBuildZebra.toBoolean()) {
         implementation project(":zebra:zebra_core")
         implementation project(":zebra:lib_provider_build_base")
