--- a/QRBusinessBasic/src/main/AndroidManifest.xml
+++ b/QRBusinessBasic/src/main/AndroidManifest.xml
@@ -2,4 +2,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.qq.reader.module.bookstore.qweb.fragment">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
