--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,6 @@ include ':zebra_core'
 
 //Demo 模块
 include ':YWRouter_Android'
-include ':QRBusinessBasic'
+include ':BusinessBasic'
 include ':QRBookStore'
 include ':app'
