--- a/settings.gradle
+++ b/settings.gradle
@@ -1,8 +1,7 @@
-rootProject.name='zebra'
 include ':zebra_core'
 
 //Demo 模块
 include ':YWRouter_Android'
 include ':BusinessBasic'
-include ':ListModule'
+include ':List'
 include ':app'
