--- a/Basic/build.gradle
+++ b/Basic/build.gradle
@@ -57,6 +57,11 @@ dependencies {
     api 'com.tencent:mmkv-static:1.2.7'
     implementation 'com.getkeepsafe.relinker:relinker:1.4.1'
 
+    //Glide
+    api "com.github.bumptech.glide:glide:4.8.0"
+    annotationProcessor "com.github.bumptech.glide:compiler:4.8.0"
+    api "jp.wasabeef:glide-transformations:4.0.1"
+
     api project(":BaseUtil")
 
     if (isSourceBuildZebra.toBoolean()) {
