--- a/Basic/build.gradle
+++ b/Basic/build.gradle
@@ -14,11 +14,21 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+
+        //Bugly
+        ndk {
+            // 设置支持的SO库架构
+            abiFilters 'armeabi' //, 'x86', 'armeabi-v7a', 'x86_64', 'arm64-v8a'
+        }
     }
 
     buildTypes {
-        release {
+        debug {
             minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        release {
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -61,6 +71,10 @@ dependencies {
     api "com.github.bumptech.glide:glide:4.8.0"
     annotationProcessor "com.github.bumptech.glide:compiler:4.8.0"
     api "jp.wasabeef:glide-transformations:4.0.1"
+
+    //Bugly
+    api 'com.tencent.bugly:crashreport:3.3.3' //其中latest.release指代最新Bugly SDK版本号，也可以指定明确的版本号，例如2.2.0
+    implementation 'com.tencent.bugly:nativecrashreport:3.7.7' //其中latest.release指代最新Bugly NDK版本号，也可以指定明确的版本号，例如3.0
 
     api project(":BaseUtil")
 
