--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ buildscript {
         classpath "com.android.tools.build:gradle:3.5.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
+        //bugly 符号表上传
+        classpath 'com.tencent.bugly:symtabfileuploader:2.2.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
